Improvements and exception fixes